# aserehe

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.m  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-python-env/: action.yaml
.github/workflows/: check-code.yaml  check-commits.yaml  check-pr-title.yaml  release.yaml  semantic-release.yaml  test.yaml
aserehe/: __main__.py  _check.py  _version.py  check.py
src/aserehe/: __main__.py  _changelog.py  _check.py  _cli.py  _commit.py  _version.py
tests/: conftest.py  test_changelog.py  test_check.py  test_cli.py  test_commit.py  test_version.py
tests/data/: invalid_format_messages.yaml  invalid_type_messages.yaml  valid_messages.yaml
