[project]
name = "aserehe"
version = "0.1.0"
description = "a semantic release helper CLI"
authors = [
    { name = "Jan Lukány", email = "lukany.jan@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "GitPython>=3.1.32,<4.0.0",
    "semantic-version>=2.10.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "typing-extensions>=4.7.1,<5.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[project.scripts]
aserehe = "aserehe.__main__:app"

[project.urls]
repository = "https://github.com/lukany/aserehe"

[dependency-groups]
dev = [
    "bandit>=1.7.5,<2.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pytest>=7.4.0,<8.0.0",
    "ruff>=0.0.284,<0.1.0",
    "PyYAML>=6.0.2,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
